# yolov8_ros

./: .gitignore  .gitmodules  README.md
ros_yolov8_viewer/: CMakeLists.txt  README.md  package.xml
ros_yolov8_viewer/include/ros_yolov8_viewer/: viewer.h
ros_yolov8_viewer/launch/: yolov8_viewer.launch
ros_yolov8_viewer/src/: viewer.cpp
yolov8_msgs/: CMakeLists.txt  package.xml
yolov8_msgs/action/: CheckForObjects.action  CheckForSegmentation.action
yolov8_msgs/msg/: BoundingBox.msg  BoundingBoxes.msg  MaskBox.msg  MaskBoxes.msg  ObjectCount.msg  SegmentCount.msg
yolov8_trt_ros/: CMakeLists.txt  package.xml  yolov8_plugins.xml
yolov8_trt_ros/cfg/: detector_for_cam.yaml  detector_for_image.yaml  detector_for_video.yaml  segment_for_cam.yaml
yolov8_trt_ros/include/detect/: yolov8_object_detector.hpp
yolov8_trt_ros/include/segment/: yolov8_instance_segmentation.hpp
yolov8_trt_ros/include/utils/: utils.h
yolov8_trt_ros/launch/: rosbag_play_tum.launch  yolov8_detector_trt.launch  yolov8_segment_trt.launch
yolov8_trt_ros/src/: yolov8_instance_segment_nodelet.cpp  yolov8_instance_segmentation.cpp  yolov8_instance_segmentation_node.cpp  yolov8_object_detector.cpp  yolov8_object_detector_node.cpp  yolov8_object_detector_nodelet.cpp
